# Otto-Snack

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
Snake/: Apple.py  Board.py  COLORS.py  Colors.py  Game.py  Runner.py  Snake.py
otto_snack/: Apple.py  Game.py  Runner.py  Snake.py
otto_snack/Game/: Apple.py  COLORS.py  Game.py  Runner.py  Snake.py
src/Otto_Snack/: Apple.py  Board.py  Colors.py  Game.py  Runner.py  Snake.py  __init__.py
src/Otto_Snack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/otto_snack/: Board.py  COLORS.py  Game.py  Runner.py
