[tool.poetry]
name = "otto-snack"
version = "0.1.0"
description = "A version of the popular game Snake based on my dog, Otto"
authors = ["Zane Emerick <zaneemerick@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
otto-snack = "otto_snack.Runner:main"
